--- a/Pi/wpa_supplicant.conf
+++ b/Pi/wpa_supplicant.conf
@@ -3,6 +3,21 @@ update_config=1
 country=US
 
 network={
- ssid="<nwid>"
- psk="<pw>"
+  ssid="NETGEAR84-5G"
+  psk="mistyiris581"
+}
+
+network={
+  ssid="NETGEAR84"
+  psk="mistyiris581"
+}
+
+network={
+  ssid="NTGR_9727_5G"
+  psk="p7G2cLXN"
+}
+
+network={
+  ssid="NTGR_9727"
+  psk="p7G2cLXN"
 }
