--- a/Pi/wpa_supplicant.conf
+++ b/Pi/wpa_supplicant.conf
@@ -3,21 +3,11 @@ update_config=1
 country=US
 
 network={
-  ssid="NETGEAR84-5G"
-  psk="mistyiris581"
+  ssid="<myssid1>"
+  psk="<mypks1>"
 }
 
 network={
-  ssid="NETGEAR84"
-  psk="mistyiris581"
-}
-
-network={
-  ssid="NTGR_9727_5G"
-  psk="p7G2cLXN"
-}
-
-network={
-  ssid="NTGR_9727"
-  psk="p7G2cLXN"
+  ssid="<myssid2>"
+  psk="<mypsk2>"
 }
